# CXEngineUnity

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  log.txt  readme.md
Assets/Art/Avatar/: GameObject.controller  xx0.tga  xx1.tga  xx2.tga  xx3.tga  xx4.tga  xx5.tga  xx6.tga  xx7.tga  xx8.tga
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: GameMain.cs
Assets/Settings/: UniversalRP.asset
Assets/Settings/Scenes/: URP2DSceneTemplate.unity
Assets/Slua/example/: custom.unity  delegate.unity  main.unity  multistate.unity  performance_test.unity  valuetype_test.unity
Assets/Slua/example/test/: test.unity
NativeProject/: CMakeLists.txt
ProjectSettings/: GraphicsSettings.asset
UnityProject/: .gitignore
UnityProject/Assets/: UseCXEngine.cs
UnityProject/Assets/Art/Avatar/: GameObject 1.controller  xx6.tga  xx8.tga
UnityProject/Assets/Plugins/Slua_Managed/: LuaDLL.cs  LuaDLLWrapper.cs  LuaState.cs  LuaSvr.cs
UnityProject/Assets/Scenes/: SampleScene.unity  TestScene.unity
UnityProject/Assets/Scripts/: Game.cs  UseCXEngine.cs
UnityProject/Assets/Settings/: Renderer2D.asset  Universal Render Pipeline Asset.asset  Universal Render Pipeline Asset_Renderer.asset  UniversalRP.asset
UnityProject/Assets/Slua/Editor/: CustomExport.cs  LuaCodeGen.cs
UnityProject/Assets/Slua/example/: circle.unity  main.unity  new_coroutine.unity  varobj.unity
UnityProject/ProjectSettings/: GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
UnityProject/UserSettings/: EditorUserSettings.asset
UnityProject/UserSettings/Layouts/: default-2021.dwlt  default-2022.dwlt
UserSettings/Layouts/: default-2021.dwlt
client/: CMakeLists.txt
client/src/: RenderAPI_OpenGLCoreES.cpp  RenderingPlugin.cpp  game.h  input_manager.cpp  input_manager.h  resource_manager.h  sprite_batch.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h  ui.h  window.cpp  window.h
client/src/Unity/: RenderAPI_D3D12.cpp  RenderAPI_OpenGLCoreES.cpp  RenderingPlugin.cpp
client/src/animation/: sprite.cpp  sprite.h
client/src/audio/: audio_manager.cpp  audio_manager.h
client/src/graphics/: bitmap.cpp  shader.cpp  shader.h  texture.cpp  texture.h  ui_renderer.cpp  ui_renderer.h
client/src/pch/: precompile.h
client/src/scene/: game_map.cpp  scene_manager.cpp
cmake/: FindOpenGLES3.cmake
common/: CMakeLists.txt
common/src/: file_loading.cpp  file_loading.h  file_system.cpp  file_system.h  logger.cpp  logger.h  message.h  profile.cpp  profile.h  protocol.h  script_system.cpp  script_system.h
common/src/actor/: action.cpp  actor.cpp  actor_enum.cpp  actor_enum.h
common/src/imgui/: cximgui.cpp
common/src/time/: time.cpp  time.h  timer.h  timer_manager.h
scripts/client/: main.lua
scripts/share/: content_system.lua  utils.lua
server/: CMakeLists.txt
