cmake_minimum_required ( VERSION 3.5 )
project ( NativeProject  )
#set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/dist )

add_subdirectory(asio)
add_subdirectory(glm)
add_subdirectory(glew-cmake)
add_subdirectory(imgui)
add_subdirectory(lua-cmake)
add_subdirectory(luacjson-cmake)
add_subdirectory(luadbg)
# add_subdirectory(ejoy2d)
add_subdirectory(NESupport)
add_subdirectory(nlohmann)
add_subdirectory(cxlua)

